force-app/main/default/objects/Log__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <label>AccountID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>