force-app/main/default/objects/Log__c/fields/IsMSTeamCreated__c.field-meta.xml
<CustomField>
    <fullName>IsMSTeamCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMSTeamCreated</label>
    <type>Checkbox</type>
</CustomField>