force-app/main/default/objects/Log__c/fields/isWidgetActive__c.field-meta.xml
<CustomField>
    <fullName>isWidgetActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWidgetActive</label>
    <type>Checkbox</type>
</CustomField>