force-app/main/default/objects/Log__c/fields/JSONResponse__c.field-meta.xml
<CustomField>
    <fullName>JSONResponse__c</fullName>
    <label>JSONResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>