force-app/main/default/objects/Log__c/fields/TeamEmail__c.field-meta.xml
<CustomField>
    <fullName>TeamEmail__c</fullName>
    <label>TeamEmail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>