force-app/main/default/objects/Log__c/fields/Unique_Execution_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Execution_Identifier__c</fullName>
    <label>Unique Execution Identifier</label>
    <type>TextArea</type>
</CustomField>