force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TeamEmail__c</columns>
    <columns>IsMSTeamCreated__c</columns>
    <columns>StatusCode__c</columns>
    <columns>JSONResponse__c</columns>
    <columns>StackTrace__c</columns>
    <columns>IsSuccess__c</columns>
    <columns>isWidgetActive__c</columns>
    <columns>SiteURL__c</columns>
    <columns>SPGroupID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>