force-app/main/default/objects/Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>StatusCode__c</columns>
    <columns>JSONResponse__c</columns>
    <columns>SPGroupID__c</columns>
    <columns>TeamEmail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>